fix: fixed dashboard header and list title alignment

--- a/frontend/src/container/ListOfDashboard/DashboardList.styles.scss
+++ b/frontend/src/container/ListOfDashboard/DashboardList.styles.scss
@@ -64,7 +64,6 @@
 
 						.dashboard-icon {
 							display: inline-block;
-							margin-top: 4px;
 							margin-right: 4px;
 							line-height: 20px;
 						}
@@ -73,6 +72,12 @@
 							min-height: 6px;
 							min-width: 6px;
 							border-radius: 50%;
+						}
+
+						.title-link {
+							display: flex;
+							align-items: center;
+							gap: 4px;
 						}
 
 						.title {
