--- a/frontend/src/container/NewDashboard/DashboardDescription/Description.styles.scss
+++ b/frontend/src/container/NewDashboard/DashboardDescription/Description.styles.scss
@@ -130,7 +130,7 @@
 
 		.left-section {
 			display: flex;
-			flex-wrap: wrap;
+			// flex-wrap: wrap;
 
 			align-items: center;
 			gap: 8px;
